# optable

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: api_doc.rst  base.Base.rst  base.Vector.rst  base.misc.rst  base.rst  build_examples_outputs.py  color.py  component_group.Asphere.rst  component_group.ComponentGroup.rst  component_group.GlassPlate.rst  component_group.Lens.rst  component_group.MMA.rst  component_group.Prism.rst  component_group.rst  conf.py  detailed_doc.rst  generate_examples_docs.py  index.rst  installation.rst  interact.rst  material.Functions.rst  material.Glass.rst  material.Material.rst  material.RefractiveIndex.rst  material.rst  monitor.rst  optical_component.Lens.rst  optical_component.Mirror.rst  optical_component.Misc.rst  optical_component.OpticalComponent.rst  optical_component.Refractive.rst  optical_component.rst  optical_table.rst  ray.GaussianBeam.rst  ray.Ray.rst  ray.functions.rst  ray.rst  ray1.rst  requirements.txt  solver.rst  (+1 more)
examples/: 1dbeams_components.csv  1dbeams_rays_traced.csv  aspheric.py  calibrate_4f.py  cavity_4mir.py  chromatic_aberration.py  corner_cube.py  dove_prism.py  gaussian_beam.py  gaussian_telescope.py  geometry.py  glass_materials.py  glass_slab.py  mirror_pair.py  physical_color.py  prism.py  prism_refl.py  real_lenses.py  real_lenses_abcd.py  real_lenses_abcd_1.py  ripa_gen2_2nd_simplified.py  ripa_gen2_lensless.py  solve_move.py  wedge_plate.py
optable/: __init__.py  base.py  component_group.py  interact.py  interact_new.py  (+8 more)
(+19 files in other folders)
